# django-lit-urls

./: CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: poetry.yml
django_lit_urls/: serializer.py  utils.py
tests/: test_js_urls.py
