[tool.poetry]
name = "django_lit_urls"
version = "0.1.0"
description = "Django URLS delivered as string literal functions in Javascript"
authors = ["Josh Brooks <josh@catalpa.io>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.2"
Django = ">3.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
